CC project added

--- a/Semester A/Natural Language Processing/projects/project2/180288337_code.ipynb
+++ b/Semester A/Natural Language Processing/projects/project2/180288337_code.ipynb
@@ -699,7 +699,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "    <b>Warning:</b> The <code>n_grams</code> extraction has been developed using code snippets taken from <b><a href='https://stackoverflow.com/questions/17531684/n-grams-in-python-four-five-six-grams'>this</a></b> Stack Overflow.\n",
+    "    <b>Warning:</b> The <code>n_grams</code> extraction has been developed using code snippets taken from <b><a href='https://stackoverflow.com/questions/17531684/n-grams-in-python-four-five-six-grams'>this</a></b> Stack Overflow post.\n",
     "</div>"
    ]
   },
@@ -1143,7 +1143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
